# ROS_Unity_test

./: .gitignore  AGENTS.md  Architecture.md  CLAUDE.md  CommunicationStructure.md  FunctionLog.md  QWEN.md  README.md
.claude/: settings.local.json
data/central_controller/: trials_20260310_101418.csv  trials_20260310_102831.csv  triggers_20260310_102519.csv
data/central_controller_ssvep2/: ssvep2_decode_mapping_20260311_141312.csv  ssvep2_decode_mapping_20260311_144703.csv  ssvep2_decode_mapping_20260311_145130.csv  ssvep2_decode_mapping_20260311_150329.csv  ssvep2_decode_mapping_20260312_093027.csv  ssvep2_decode_mapping_20260312_093113.csv  ssvep2_decode_mapping_20260312_100614.csv  ssvep2_decode_mapping_20260312_110247.csv  ssvep2_decode_mapping_20260312_160042.csv  ssvep2_decode_mapping_20260312_160344.csv  ssvep2_decode_mapping_20260312_160406.csv  (+42 more)
dev_logs/: 0316.md  0317.md  0318.md  0319.md  2026-03-02.md  2026-03-03.md  2026-03-04.md  2026-03-05.md  2026-03-06.md  2026-03-09.md  2026-03-11.md  2026-03-12.md  2026-03-13.md  2026-03-14.md
docs/: ssvep_node3_lifeline.puml  ssvep_node3_topology.dot
install/: local_setup.sh  setup.sh
log/: latest_build
src/publisher_test/: UDP_TRIGGER_LOG.md  package.xml  setup.cfg  setup.py  windows_com_publisher.py  windows_local_data.py  windows_udp_receiver.py
src/publisher_test/publisher_test/: eeg_tcp_listener_node.py  eeg_udp_listener_node.py  reasoner_publish_test.py  reasoner_publish_test_1.py  reasoner_publish_test_2.py  reasoner_publish_test_2_local_llm.py  reasoner_publish_test_3_test.py
(+179 files in other folders)
