<?xml version="1.0"?>
<?xml-model href="http://packageformat3.org/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>publisher_test</name>
  <version>0.0.1</version>
  <description>Test publisher for Unity ROS2 TCP connection</description>
  <maintainer email="user@example.com">themountaintree</maintainer>
  <license>MIT</license>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>